manuscript version sent to Andy and Eduardo

--- a/presentations/bsm-ms/bsm-ms.tex
+++ b/presentations/bsm-ms/bsm-ms.tex
@@ -474,7 +474,7 @@ large ones.
 \subsection*{Data availability}
 
 All FASTQ, CRAM and VCF files generated for this work have been submitted to
-collection #2965 of the National Institute of Mental Health Data Archive
+collection 2965 of the National Institute of Mental Health Data Archive
 (https://nda.nih.gov/) and will be released for the public.
 
 \subsection*{Code availability}
