setting current working directory to bsm/

--- a/notebook/2021-01-26-indiv-counts-modeling/2021-01-26-indiv-counts-modeling.ipynb
+++ b/notebook/2021-01-26-indiv-counts-modeling/2021-01-26-indiv-counts-modeling.ipynb
@@ -40,7 +40,10 @@
     "import indiv_counts_modeling as icm\n",
     "%matplotlib inline\n",
     "import matplotlib\n",
-    "matplotlib.rcParams['text.usetex'] = False"
+    "matplotlib.rcParams['text.usetex'] = False\n",
+    "import bsmutils\n",
+    "import os\n",
+    "os.chdir(bsmutils.get_bsmdir())"
    ]
   },
   {
@@ -57,10 +60,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = SNPnexus.load_data('../../results/2020-09-07-annotations/annotated-calls.p')\n",
+    "data = SNPnexus.load_data('results/2020-09-07-annotations/annotated-calls.p')\n",
     "sczgwasloci = genome.read_scz_gwas()\n",
     "data = genome.annotate_with_gwas_loci(data, gwas=sczgwasloci, modify_return_data=True)\n",
-    "clozukpath = '../../resources/CLOZUK/supp-table-4.csv'\n",
+    "clozukpath = 'resources/CLOZUK/supp-table-4.csv'\n",
     "gwasgenes = operations.get_geneset(df=pd.read_csv(clozukpath, skiprows=7), col='Gene(s) tagged')"
    ]
   },
@@ -86,9 +89,9 @@
     }
    ],
    "source": [
-    "fpath = '../2021-03-09-gwas-genes/selected-gwas.csv'\n",
+    "fpath = 'notebook/2021-03-09-gwas-genes/selected-gwas.csv'\n",
     "selgwas = pd.read_csv(fpath, index_col='Trait', sep='\\t')\n",
-    "fpath = '../../resources/GWAS/gwas_catalog_v1.0.2-associations_e100_r2021-02-25.tsv'\n",
+    "fpath = 'resources/GWAS/gwas_catalog_v1.0.2-associations_e100_r2021-02-25.tsv'\n",
     "gwas = pd.read_csv(fpath, sep='\\t')\n",
     "gwas = gwas.loc[gwas['PUBMEDID'].isin(selgwas['PMID']), :]\n",
     "\n",
@@ -124,7 +127,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fpath = '../../resources/rare-variants/41586_2014_BFnature12975_MOESM71_ESM.csv'\n",
+    "fpath = 'resources/rare-variants/41586_2014_BFnature12975_MOESM71_ESM.csv'\n",
     "func_scz_genesets = pd.read_csv(fpath, sep='\\t', index_col='Gene symbol').dropna().astype(pd.CategoricalDtype())\n",
     "func_scz_genesets = func_scz_genesets.apply(lambda s: s.cat.rename_categories({'.': False, 'Y': True}), axis=1)\n",
     "func_scz_genesets['composite'] = True\n",
@@ -144,7 +147,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tsvpath = '../../results/2021-02-24-gnomad-constraint/gnomad.v2.1.1.lof_metrics.by_gene.txt'\n",
+    "tsvpath = 'results/2021-02-24-gnomad-constraint/gnomad.v2.1.1.lof_metrics.by_gene.txt'\n",
     "constr = pd.read_csv(tsvpath, delimiter='\\t', index_col=0)\n",
     "constr['oe_lof < 0.35'] = constr.oe_lof < 0.35\n",
     "genes_oe_lof = set(constr.index[constr['oe_lof < 0.35']])"
@@ -3756,7 +3759,7 @@
     "varsel['size_scz'] = responses_scz.sum()\n",
     "#varsel['nindiv | ncalls_f > 0'] = responses.apply(lambda x: x.value_counts()[1:].sum(), axis=0)\n",
     "df = pd.concat([varsel.iloc[:, ::2], varsel[['size_scz']]], axis=1)\n",
-    "df.to_csv('../../results/2021-01-26-indiv-counts-modeling/varsel.csv')\n",
+    "df.to_csv('results/2021-01-26-indiv-counts-modeling/varsel.csv')\n",
     "df"
    ]
   },
@@ -4338,7 +4341,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fpath = '../../results/2021-01-26-indiv-counts-modeling/regression-results.csv'\n",
+    "fpath = 'results/2021-01-26-indiv-counts-modeling/regression-results.csv'\n",
     "regres = pd.concat([varsel.loc[:, [('poisson_scz', 'formula'), ('binomial_scz', 'formula')]].swaplevel(0, 1, axis=1),\n",
     "           df.drop(['poisson', 'binomial'], axis=1, level=1)], axis=1)\n",
     "regres = regres.rename({'poisson_scz': 'log-linear', 'binomial_scz': 'logistic'}, axis=1).fillna('failed to converge')\n",
@@ -5344,7 +5347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -5481,7 +5484,7 @@
        "bonferroni                                 []  "
       ]
      },
-     "execution_count": 78,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5518,7 +5521,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fdr_rejected.iloc[:3].to_csv('../../results/2021-01-26-indiv-counts-modeling/fdr.csv')"
+    "fdr_rejected.iloc[:3].to_csv('results/2021-01-26-indiv-counts-modeling/fdr.csv')"
    ]
   },
   {
@@ -6159,13 +6162,13 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"shell_port\": 53929,\n",
-      "  \"iopub_port\": 49497,\n",
-      "  \"stdin_port\": 45177,\n",
-      "  \"control_port\": 37209,\n",
-      "  \"hb_port\": 33701,\n",
+      "  \"shell_port\": 55725,\n",
+      "  \"iopub_port\": 40723,\n",
+      "  \"stdin_port\": 43059,\n",
+      "  \"control_port\": 56397,\n",
+      "  \"hb_port\": 39155,\n",
       "  \"ip\": \"127.0.0.1\",\n",
-      "  \"key\": \"b30bddaf-d2d79877bf22723c354b7f75\",\n",
+      "  \"key\": \"01eac6b4-3094d0ee857e24606402cb97\",\n",
       "  \"transport\": \"tcp\",\n",
       "  \"signature_scheme\": \"hmac-sha256\",\n",
       "  \"kernel_name\": \"\"\n",
@@ -6174,7 +6177,7 @@
       "Paste the above JSON into a file, and connect with:\n",
       "    $> jupyter <app> --existing <file>\n",
       "or, if you are local, you can connect with just:\n",
-      "    $> jupyter <app> --existing kernel-d5197490-ca77-4157-92cb-329fd687a725.json\n",
+      "    $> jupyter <app> --existing kernel-c8ed4745-41e2-4dc9-9a99-0335282b4c69.json\n",
       "or even just:\n",
       "    $> jupyter <app> --existing\n",
       "if this is the most recent Jupyter kernel you have started.\n"
