--- a/notebook/2021-01-26-indiv-counts-modeling/2021-01-26-indiv-counts-modeling.ipynb
+++ b/notebook/2021-01-26-indiv-counts-modeling/2021-01-26-indiv-counts-modeling.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Hello World!"
+    "Here we model the count or fraction of somatic SNVs per individual in a given genomic element or gene set."
    ]
   },
   {
@@ -43,6 +43,7 @@
     "matplotlib.rcParams['text.usetex'] = False\n",
     "import bsmutils\n",
     "import os\n",
+    "#os.environ[\"PYTHONPATH\"] = \"/mnt/c/Users/emaur/Dropbox (MIT)/Walsh Lab/SCZ_SNV/bsm/\"\n",
     "os.chdir(bsmutils.get_bsmdir())"
    ]
   },
